--- a/AddCorrectTable.csproj
+++ b/AddCorrectTable.csproj
@@ -7,11 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="SQL\Scripts\**" />
+    <Content Remove="SQL\Scripts\**" />
+    <EmbeddedResource Remove="SQL\Scripts\**" />
+    <None Remove="SQL\Scripts\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Dapper" Version="2.1.66" />
     <PackageReference Include="FirebirdSql.Data.FirebirdClient" Version="10.3.3" />
     <None Include="C:\temp\AddCorrectTable\.editorconfig" />
-  <None Include="SQL\Scripts\MATERIAL.sql" />
-  <None Include="SQL\Scripts\MATERIAL_DAY_VALUE.sql" />
   </ItemGroup>
 
   <ItemGroup>
