--- a/AddCorrectTable.csproj
+++ b/AddCorrectTable.csproj
@@ -16,6 +16,7 @@
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.1.66" />
     <PackageReference Include="FirebirdSql.Data.FirebirdClient" Version="10.3.3" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.9.0" />
     <None Include="C:\temp\AddCorrectTable\.editorconfig" />
   </ItemGroup>
 
