--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -7,6 +7,7 @@
         }
     },
     "ConnectionStrings": {
-        "DefaultConnection": "Database=localhost:D:\\repos\\Databases\\dc_oper.fdb;Charset=UTF8;User=sysdba;Password=masterkey;"
+        "DefaultConnection": "Database=localhost:D:\\repos\\Databases\\dc_oper.fdb;Charset=UTF8;User=sysdba;Password=masterkey;",
+        "SqlServerConnection": "Data Source=.;Initial Catalog=MetJob;Integrated Security=True; Trusted_Connection=True;TrustServerCertificate=True;Connect Timeout=60;"
     }
 }
